# bulk_intent_creator

./: .gitignore  LICENSE  README.md  pyproject.toml
bulk_intent_creator/: __init__.py  cli.py  client.py  csv_parser.py  exceptions.py  models.py
examples/: bulk_create_example.py  sample_checks.csv
