[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bulk-intent-creator"
version = "0.1.0"
description = "Bulk create Forward Networks intent checks from a CSV file"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.scripts]
bulk-intent-creator = "bulk_intent_creator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bulk_intent_creator*"]
